# TextCompressor

./: CMakeLists.txt  CompressedText.txt  DecompressedText.txt  MainHeader.h  Tree.h  compressedText.txt  main.c  mainHeader.h  text.txt
Compress/: CompressWord.c  CompressWord.h
Decoding/: Decode.c  DecodeOld.c
DynamicArray/: DynamicCharacterCount.c  DynamicCharacterCount.h
Encoding/: Encode.c  Tree.c  Tree.h
FrequencyAnalysis/: Frequency.c  Frequency.h
